--- a/originhash/package.json
+++ b/originhash/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
@@ -35,6 +36,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.66.0",
@@ -42,6 +44,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
